# deepstream_challenge

./: .gitignore  README.md
optriment_pipeline/: CMakeLists.txt  README  kafka_listener.py  run.sh
optriment_pipeline/config/: broker_config.txt  config_roi2.txt  dstest2_pgie_config.yml  pipeline_config.yml  roi1.txt
optriment_pipeline/docker/: Dockerfile  install.sh  run.sh
optriment_pipeline/include/: ArgParser.h  KafkaProducer.h  KafkaPublisher.h  Pipeline.h  RegionCountMessage.h  Serializable.h
optriment_pipeline/lib/: CMakeLists.txt
optriment_pipeline/lib/custom_nvmsgconv/: CMakeLists.txt
optriment_pipeline/lib/custom_nvmsgconv/include/: custom-nvmsgconv.h  custom_schema.h  gstnvmsgconv.h
optriment_pipeline/lib/custom_nvmsgconv/src/: custom-nvmsgconv.cpp  deepstream_schema.cpp  dsmeta_payload.cpp  eventmsg_payload.cpp  gstnvmsgconv.cpp
optriment_pipeline/src/: KafkaPublisher.cpp  Pipeline.cpp  RegionCountMessage.cpp  kafka_producer.cpp  optriment_pipeline.cpp
